2006-05-23  Pavel Tsekov  <ptsekov@gmx.net>

	* tty.c (tty_tgetstr) [HAVE_SLANG]: str_unconst() the argument
	passed to SLtt_tgetstr().

2006-05-23  Pavel Tsekov  <ptsekov@gmx.net>

	* file.c (move_dir_dir): Remove Win32 specific code.

2006-05-21  Roland Illig  <roland.illig@gmx.de>

	* mountlist.c: Fixed so that it builds on NetBSD 3.0.

2006-05-15  Pavel Tsekov  <ptsekov@gmx.net>

	* tty.h [USE_NCURSES]: Pull in term.h if WANT_TERM_H is defined.
	(tty_tgetstr): Declare new function.
	* tty.c [USE_NCURSES]: Request the inclusion of term.h.
	(tty_tgetstr): Define new function
	* main.c (init_xterm_support): Use tty_tgetstr().

2006-05-10  Pavel Tsekov  <ptsekov@gmx.net>

	* user.c: Do not include subshell.h .

2006-05-08  Pavel Tsekov  <ptsekov@gmx.net>

	* subshell.c (resize_subshell): Do not try to resize the subshell tty
	if the subshell is not running.

2006-04-13  Leonard den Ottolander  <leonard den ottolander nl>

	* cons.handler.c (handle_console_linux): Remove redundant close() calls
	before _exit().

2006-03-29  Pavel Tsekov  <ptsekov@gmx.net>

	* file.c (copy_file_file): When a hardlink is created successfully
	report success (FILE_CONT) to the caller. Fixes debian bug #301537.

2006-03-06  Pavel Tsekov  <ptsekov@gmx.net>

	* mouse.h (Mouse_Type): Add new enumerated values to describe
	the xterm mouse reporting modes offered by various xterm-like
	terminals.
	* mouse.c: Adjust the code to reflect the changes above.
	Send the proper terminal control codes when xterm normal mouse
	tracking is requested.
	* main.c (init_xterm_support): Try to fine-tune the mouse tracking
	mode based on the terminal type.

2006-02-28  Pavel Tsekov  <ptsekov@gmx.net>

	* widget.h (struct WRadio): Remove unused field
	`upper_letter_is_hotkey'.
	(radio_new): Remove the last argument from the function
	declaration - it is unused.
	* widget.c (radio_new): Remove the last argument from the
	function declaration - it is unused.